--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gba/3ds-cmake"]
 	path = gba/3ds-cmake
 	url = https://github.com/Xtansia/3ds-cmake.git
+[submodule "test/Catch2"]
+	path = test/Catch2
+	url = https://github.com/catchorg/Catch2.git
