--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,8 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
-_deps
 CMakeUserPresets.json
+_deps
+_build
+build
+test/data
