--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "cxxopts"]
 	path = cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
+[submodule "gba/GBA-demo-framework"]
+	path = gba/GBA-demo-framework
+	url = https://github.com/HorstBaerbel/GBA-demo-framework.git
