--- a/gba/.vscode/launch.json
+++ b/gba/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Run gbatv in mgba",
+            "name": "Run in mgba",
             "type": "cppdbg",
             "preLaunchTask": "${defaultBuildTask}",
             "request": "launch",
@@ -17,22 +17,77 @@
             "cwd": "${command:cmake.buildDirectory}"
         },
         {
-            "name": "Launch/Debug gbatv in mgba",
+            "name": "Run in mgba (Flatpak)",
+            "type": "cppdbg",
+            "preLaunchTask": "${defaultBuildTask}",
+            "request": "launch",
+            "program": "/usr/bin/flatpak",
+            "args": [
+                "run",
+                "io.mgba.mGBA",
+                "-2",
+                "${command:cmake.launchTargetPath}"
+            ],
+            "cwd": "${command:cmake.buildDirectory}"
+        },
+        {
+            "name": "Launch/Debug in mgba (Flatpak)",
+            "type": "cppdbg",
+            "request": "launch",
+            "preLaunchTask": "${defaultBuildTask}",
+            "postDebugTask": "Terminate mGBA",
+            "targetArchitecture": "arm",
+            "program": "${command:cmake.launchTargetPath}",
+            "cwd": "${command:cmake.buildDirectory}",
+            "args": [],
+            "stopAtEntry": false,
+            "environment": [],
+            "MIMode": "gdb",
+            "miDebuggerServerAddress": "localhost:2345",
+            "linux": {
+                "miDebuggerPath": "${env:DEVKITARM}/bin/arm-none-eabi-gdb",
+                "setupCommands": [
+                    {
+                        "text": "set print pretty",
+                        "ignoreFailures": false
+                    },
+                    {
+                        "text": "file ${command:cmake.launchTargetPath}",
+                        "ignoreFailures": false
+                    },
+                    {
+                        "text": "-gdb-set disassembly-flavor arm",
+                        "ignoreFailures": true
+                    },
+                    {
+                        "text": "shell flatpak run io.mgba.mGBA -2 -g \"${command:cmake.launchTargetPath}\" &",
+                        "ignoreFailures": false
+                    }
+                ]
+            },
+            "externalConsole": false,
+            "showDisplayString": true,
+            "logging": {
+                "traceResponse": true,
+                "moduleLoad": true,
+                "trace": true,
+                "engineLogging": true,
+                "programOutput": true,
+                "exceptions": true
+            }
+        },
+        {
+            "name": "Launch/Debug in mgba",
             "type": "cppdbg",
             "request": "launch",
             "preLaunchTask": "${defaultBuildTask}",
             "program": "${command:cmake.launchTargetPath}",
-            "debugServerPath": "mgba-qt",
+            "debugServerPath": "/usr/bin/mgba-qt",
             "debugServerArgs": "-2 -g ${command:cmake.launchTargetPath}",
             "cwd": "${command:cmake.buildDirectory}",
-            //"filterStderr": true,
-            //"filterStdout": false,
-            //"serverStarted": "",
             "stopAtEntry": false,
             "MIMode": "gdb",
             "miDebuggerPath": "${env:DEVKITARM}/bin/arm-none-eabi-gdb",
-            //"miDebuggerArgs": "-ex \"target remote localhost:2345\" ${command:cmake.launchTargetPath}",
-            //"miDebuggerServerAddress": "localhost:2345",
             "setupCommands": [
                 {
                     "text": "set print pretty",
@@ -63,15 +118,13 @@
             }
         },
         {
-            "name": "Run in vba",
+            "name": "Run in Mesen",
             "type": "cppdbg",
             "request": "launch",
-            "preLaunchTask": "build Release",
-            "program": "/usr/bin/vba",
+            "preLaunchTask": "${defaultBuildTask}",
+            "program": "/home/horstbaerbel/Software/Mesen",
             "args": [
-                "${command:cmake.launchTargetPath}",
-                "-2",
-                "--agb-print"
+                "${command:cmake.launchTargetPath}.gba",
             ],
             "cwd": "${command:cmake.buildDirectory}"
         }
